<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.iths.hangman.Play"
    android:orientation="vertical"
    android:background="@drawable/index">


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:background="@color/transparent"
        android:padding="5dip"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textLevel"
            android:layout_weight = "0.5"
            android:layout_height="0dp"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:text=""
            android:textSize = "20sp"
            android:textColor = "#ffff"
            android:textStyle = "bold" />
        <TextView
            android:id="@+id/textFill"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text=""
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:typeface="serif"
            android:textSize="15pt"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/imageHanging"
            android:layout_height="200dp"
            android:background="#88FFFFFF"
            android:layout_width="fill_parent"
            android:src="@drawable/hang0"
            android:layout_marginBottom="5pt"/>
    </LinearLayout>


    <LinearLayout
        android:layout_weight = "1"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="0.5dp"
        android:weightSum="10"
        android:textSize = "22sp" >

        <Button
            android:id="@+id/buttonQ"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonletterstyle"
            android:onClick="clickLetter"
            android:text="@string/button_letter_q"
            android:textColor="@drawable/lettercolor"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonW"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_w"
            android:background="@drawable/buttonletterstyle1"
            android:textColor = "@drawable/lettercolor1"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonE"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_e"
            android:background="@drawable/buttonletterstyle"
            android:textColor = "@drawable/lettercolor"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonR"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_r"
            android:background="@drawable/buttonletterstyle1"
            android:textColor = "@drawable/lettercolor1"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonT"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_t"
            android:background="@drawable/buttonletterstyle"
            android:textColor = "@drawable/lettercolor"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonY"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_y"
            android:background="@drawable/buttonletterstyle1"
            android:textColor = "@drawable/lettercolor1"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonU"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_u"
            android:background="@drawable/buttonletterstyle"
            android:textColor = "@drawable/lettercolor"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonI"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_i"
            android:background="@drawable/buttonletterstyle1"
            android:textColor = "@drawable/lettercolor1"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonO"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_o"
            android:background="@drawable/buttonletterstyle"
            android:textColor = "@drawable/lettercolor"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonP"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_p"
            android:background="@drawable/buttonletterstyle1"
            android:textColor = "@drawable/lettercolor1"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_weight = "1"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="0.5dp"
        android:weightSum="10"
        android:textSize = "22sp" >

        <Button
            android:id="@+id/buttonA"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_a"
            android:background="@drawable/buttonletterstyle1"
            android:textColor = "@drawable/lettercolor1"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonS"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonletterstyle"
            android:onClick="clickLetter"
            android:text="@string/button_letter_s"
            android:textColor="@drawable/lettercolor"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonD"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_d"
            android:background="@drawable/buttonletterstyle1"
            android:textColor = "@drawable/lettercolor1"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonF"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_f"
            android:background="@drawable/buttonletterstyle"
            android:textColor = "@drawable/lettercolor"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonG"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_g"
            android:background="@drawable/buttonletterstyle1"
            android:textColor = "@drawable/lettercolor1"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonH"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_h"
            android:background="@drawable/buttonletterstyle"
            android:textColor = "@drawable/lettercolor"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonJ"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_j"
            android:background="@drawable/buttonletterstyle1"
            android:textColor = "@drawable/lettercolor1"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonK"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_k"
            android:background="@drawable/buttonletterstyle"
            android:textColor = "@drawable/lettercolor"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonL"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_l"
            android:background="@drawable/buttonletterstyle1"
            android:textColor = "@drawable/lettercolor1"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_weight = "1"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="0.5dp"
        android:weightSum="10"
        android:textSize = "22sp" >

        <Button
            android:id="@+id/buttonZ"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_z"
            android:background="@drawable/buttonletterstyle1"
            android:textColor = "@drawable/lettercolor1"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />
        <Button
            android:id="@+id/buttonX"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_x"
            android:background="@drawable/buttonletterstyle"
            android:textColor = "@drawable/lettercolor"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonC"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_c"
            android:background="@drawable/buttonletterstyle1"
            android:textColor = "@drawable/lettercolor1"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonV"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_v"
            android:background="@drawable/buttonletterstyle"
            android:textColor = "@drawable/lettercolor"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonB"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_b"
            android:background="@drawable/buttonletterstyle1"
            android:textColor = "@drawable/lettercolor1"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonN"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_n"
            android:background="@drawable/buttonletterstyle"
            android:textColor = "@drawable/lettercolor"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

        <Button
            android:id="@+id/buttonM"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:onClick="clickLetter"
            android:text="@string/button_letter_m"
            android:background="@drawable/buttonstartstyle"
            android:textColor = "@drawable/lettercolor1"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle = "bold"
            />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5pt">
        <Button
            android:id="@+id/buttonHome"
            android:layout_width="62pt"
            android:layout_height="20pt"
            android:onClick="goHome"
            android:text="@string/button_go_home"
            android:background="@drawable/buttonstartstyle"
            android:textColor = "@drawable/startcolor"
            android:textSize = "20sp"
            android:textStyle = "bold"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/buttonNext"
            android:layout_width="62pt"
            android:layout_height="20pt"
            android:onClick="nextOne"
            android:text="@string/button_next"
            android:layout_marginLeft="11pt"
            android:background="@drawable/buttonstartstyle"
            android:textColor = "@drawable/startcolor"
            android:textSize = "20sp"
            android:textStyle = "bold"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</LinearLayout>

